<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Demo Project Vaccine</string>
    <string name="action_settings">Settings</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>



    <string name="add_user_title">Profile</string>

    <!-- Button labels -->
    <string name="add_user_btn_label">Add User</string>
    <string name="view_all_btn_label">View All</string>
    <string name="save_updates_btn_label">Save Updates</string>


    <string name="add_user_name_hint">กรอกชื่อจริง</string>
    <string name="add_user_lastname_hint">  กรอกนามสกุล </string>
    <string name="add_user_birthday_hint">วันเกิด(วัน / เดือน / ปี)</string>
    <string name="add_user_gender_hint">Gender</string>
    <string name="add_user_weight_hint">น้ำหนัก</string>
    <string name="add_user_lenght_hint">ส่วนสูง</string>
    <string name="add_user_bloodtype_hint">กรุ๊ปเลือด</string>
    <string name="add_user_allergic_hint">แพ้ยา</string>
</resources>